--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,31 +1,32 @@
 <section>
-   <h2>Create New Post</h2>
+  
 
-   <form class="new-post-form">
-      <div>
-         <label for="post-title">Title</label>
-         <input type="text" id="post-title" name="post-title" />
-      </div>
-      <div>
-         <label for="post-url">Write a note!</label>
-         <input type="text" id="post-url" name="post-url" />
-      </div>
-      <button type="submit" class="btn">Create</button>
-   </form>
+  <form class="new-post-form">
+       <fieldset class="uk-fieldset">
+<legend class="uk-legend">New Post</legend>
+    <div class="uk-margin">
+      
+      <input class="uk-input" type="text" id="post-title" name="post-title" placeholder="Title"/>
+    </div>
+    <div class="uk-margin">
+      
+      <input class="uk-input" id="post-url" name="post-url" placeholder="Paste URL Here"/>
+    </div>
+    <button type="submit" class="btn uk-button uk-button-default">Post</button>
+    </fieldset>
+  </form>
 </section>
-
 {{#if posts.length}}
 <section>
-   <h2>Your Posts</h2>
-   <ol>
-      {{#each posts as |post|}}
-         <li>
-            {{> post-info post }}
-            <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
-         </li>
-      {{/each}}
-   </ol>
+  <h2>Your Posts</h2>
+  <ol>
+    {{#each posts as |post|}}
+    <li>
+      {{> post-info post}}
+      <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+    </li>
+    {{/each}}
+  </ol>
 </section>
 {{/if}}
-
-<script src="/public/javascript/add-post.js"></script>
+<script src="/javascript/add-post.js"></script>
