--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,27 +1,36 @@
-<article>
-  <a href="/dashboard" class="is-pulled-right"> &larr; back to dashboard</a>
-  <h2 class="title mt-5">edit post</h2><hr>
+<article class="uk-container uk-container-large" >
+  <a href="/dashboard"> &larr; Back to dashboard</a>
+  <h2>
+    Edit Post
+  </h2>
+  <div class="uk-margin">
   <form class="edit-post-form">
     <div>
-        <label for="post-title">post title:</label>
-      <input class="input" name="post-title" type="text" value="{{post.title}}" />
+      <input name="post-title" type="text" value="{{post.title}}" />
+      <span>({{format_url post.post_url}})</span>
     </div>
     <div>
-        <label for="post-content">post content:</label>
-      <input class="textarea" name="post-content" type="text" value="{{post.post_content}}" />
-    </div>
-    <div class="is-pulled-right">
-       created by you on {{format_date post.created_at}}
+        by you on {{format_date post.created_at}}
       |
       <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
     </div>
-    <button type="submit" class="button is-success">save post</button>
-    <button type="button" class="button is-danger delete-post-btn">delete post</button>
+    <button type="submit" class="uk-button-default">Save post</button>
+    <button type="button" class="delete-post-btn uk-button-default">Delete post</button>
   </form>
+  </div>
+  <div>
+  <form class="comment-form">
+  
+    <textarea class="uk-text-area" name="comment-body"></textarea>
+  </div>
+
+  <div>
+    <button class="uk-button-default"type="submit">add comment</button>
+  </div>
+</form>
+</div>
+{{> comments post.comments }}
 </article>
-
-{{> comments post.comments}}
-
-<script src="/public/javascript/edit-post.js"></script>
-<script src="/public/javascript/delete-post.js"></script>
-<script src="/public/javascript/comment.js"></script>
+<script src="/javascript/edit-post.js"></script>
+<script src="/javascript/delete-post.js"></script>
+<script src="/javascript/comment.js"></script>
