--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
-<ol class="post-list">
-  {{#each posts as |post|}}
+<ul class="post-list uk-list uk-list-divider">
+    {{#each posts as |post|}}
   <li>
-    {{> post-info post }}
+    {{> post-info post}}
   </li>
   {{/each}}
-</ol>
+</ul>
