--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,33 +1,40 @@
+<div class="uk-flex uk-flex-around">
 <form class="login-form">
-   <div>
-      <label for="email-login">email:</label>
-      <input type="text" id="email-login" />
-   </div>
-   <div>
-      <label for="password-login">password:</label>
-      <input type="password" id="password-login" />
-   </div>
-   <div>
-      <button type="submit">login</button>
-   </div>
+  <fieldset class="uk-fieldset">
+     <legend class="uk-legend">Log In</legend>
+  <div class="uk-margin">
+    
+    <input class="uk-input uk-form-width-medium" type="text" id="email-login" placeholder="Email" />
+  </div>
+  <div class="uk-margin">
+    
+    <input class="uk-input uk-form-width-medium" type="password" id="password-login" placeholder="Password"/>
+  </div>
+  <div>
+    <button class= "uk-button uk-button-default" type="submit">login</button>
+  </div>
+  </fieldset>
 </form>
 <form class="signup-form">
-   <div>
-      <label for="username-signup">username:</label>
-      <input type="text" id="username-signup" />
-   </div>
-   <div>
-      <label for="email-signup">email:</label>
-      <input type="text" id="email-signup" />
-   </div>
-   <div>
-      <label for="password-signup">password:</label>
-      <input type="password" id="password-signup" />
-   </div>
-   <div>
-      <button type="submit">signup</button>
-   </div>
-</form>
+  <fieldset class="uk-fieldset">
+     <legend class="uk-legend">Sign Up</legend>
+  <div class="uk-margin">
+    
+    <input class="uk-input uk-form-width-medium" type="text" id="username-signup" placeholder="User Name" />
+  </div>
+  <div class="uk-margin">
 
-<!-- javascript file-->
-<script src="/public/javascript/login.js"></script>
+    <input class="uk-input uk-form-width-medium" type="text" id="email-signup" placeholder="Email" />
+  </div>
+  <div class="uk-margin">
+    
+    <input class="uk-input uk-form-width-medium" type="password" id="password-signup" placeholder="Password"/>
+  </div>
+  <div>
+    <button class="uk-button uk-button-default" type="submit">signup</button>
+  </div>
+  </fieldset>
+</form>
+</div>
+
+<script src='/javascript/login.js'></script>
