--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,10 +1,10 @@
 <article class="post">
-      <div class="title">
-        <h3>{{title}}</h3>
-        <p>{{post_url}}</p>
+      <div class="title uk-text-bold">
+        <a href="{{post_url}}" target="_blank">{{title}}</a>
+        <span>({{format_url post_url}})</span>
       </div>
-      <div class="meta">
-        {{vote_count}} {{format_plural "point" vote_count}} by {{user.username}} on
+      <div class="meta uk-text-meta">
+      Posted by {{user.username}} on
         {{format_date created_at}}
         |
         <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
