--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
-<ul class="post-list uk-list uk-list-divider">
+<ul class="post-list uk-list uk-list-striped uk-align-center">
     {{#each posts as |post|}}
-  <li>
+  <li class="uk-background-secondary">
     {{> post-info post}}
   </li>
   {{/each}}
