--- a/views/partials/comment.handlebars
+++ b/views/partials/comment.handlebars
@@ -1,6 +1,6 @@
 <div class="comments">
   {{#each this}}
-  <section class="comment uk-card uk-card-default">
+  <section class="comment uk-card uk-card-secondary">
     <div class="uk-card-header">
     <div class="meta uk-text-meta">
       {{user.username}} on {{format_date created_at}}
