--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,12 +1,12 @@
 {{> post-info post}}
 {{#if loggedIn}}
-<form class="comment-form">
+<form class="comment-form uk-align-center">
   <div>
     <textarea name="comment-body"></textarea>
   </div>
 
   <div>
-    <button class="uk-button-default" type="submit">add comment</button>
+    <button class="uk-button-secondary" type="submit">Add a Comment</button>
   </div>
 </form>
 {{/if}}
