--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,34 +3,35 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title >Get with IT</title>
+        <title >ITFiles</title>
+        <link rel="stylesheet" href="/stylesheets/style.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.4/dist/css/uikit.min.css">
     </head>
 </html>
  <body class="main">
   
   <div>
-    <header class="uk-flex uk-flex-between uk-background-muted uk-padding uk-panel">
-      <h1 class="uk-heading-bullet uk-text-bold">
-        <a href="/" class="nav">Get with IT</a>
+    <header class="uk-flex uk-flex-between uk-background-secondary uk-padding uk-panel">
+      <h1 class="uk-text-bolder">
+        <a href="/" class="nav uk-text-primary" uk-icon="icon: home; ratio:2"></a>
       </h1>
-      <button class="uk-button uk-button-text uk-button-large uk-text-primary" type="button"><span uk-icon="icon: menu; ratio:3"></span></button>
-      <div uk-dropdown>
-        <ul class="uk-nav uk-dropdown-nav"></ul>
+      <button class="uk-button uk-button-text uk-button-large uk-text-primary" type="button"><span uk-icon="icon: sign-in; ratio:2"></span></button>
+      <div uk-dropdown class="uk-text-secondary">
+        <ul class="uk-nav uk-dropdown-nav uk-text-secondary"></ul>
         {{#if loggedIn}}
-        <li class="uk-active"><a href="/dashboard" class="uk-button uk-button-link">dashboard</a></li>
-        <li class="uk-active "><button id="logout" class="uk-button uk-button-link">logout</button></li>
+        <li class="uk-active uk-background-secondary"><a href="/dashboard" class="uk-button uk-button-link">dashboard</a></li>
+        <li class="uk-active uk-background-secondary "><button id="logout" class="uk-button uk-button-link uk-text-primary">logout</button></li>
         {{else}}
-        <li class="uk-active"><a href="/login" class="nav">login</a></li>
+        <li class="uk-active  uk-background-secondary"><a href="/login" class="nav uk-text-primary">Login</a></li>
         {{/if}}
         </ul>
       </div>
     </header>
-    <main >
+    <main class="uk-background-secondary">
       {{{ body }}}
     </main>
-    <footer >
-      <h6 class="foot-text uk-text-meta">Tech Blog</h4>
+    <footer class="uk-background-secondary">
+      <h6 class="foot-text uk-text-bold uk-text-primary">ITFiles</h4>
     </footer>
   </div>
   {{#if loggedIn}}
