--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <div class="uk-flex uk-flex-around">
 <form class="login-form">
   <fieldset class="uk-fieldset">
-     <legend class="uk-legend">Log In</legend>
+     <legend class="uk-legend uk-text-primary" uk-icon="icon: pencil; ratio:2">Log In</legend>
   <div class="uk-margin">
     
     <input class="uk-input uk-form-width-medium" type="text" id="email-login" placeholder="Email" />
@@ -11,13 +11,13 @@
     <input class="uk-input uk-form-width-medium" type="password" id="password-login" placeholder="Password"/>
   </div>
   <div>
-    <button class= "uk-button uk-button-default" type="submit">login</button>
+    <button class= "uk-button uk-button-secondary" type="submit">Login</button>
   </div>
   </fieldset>
 </form>
 <form class="signup-form">
   <fieldset class="uk-fieldset">
-     <legend class="uk-legend">Sign Up</legend>
+     <legend class="uk-legend uk-text-primary" uk-icon="icon: pencil; ratio:2">Sign Up</legend>
   <div class="uk-margin">
     
     <input class="uk-input uk-form-width-medium" type="text" id="username-signup" placeholder="User Name" />
@@ -31,7 +31,7 @@
     <input class="uk-input uk-form-width-medium" type="password" id="password-signup" placeholder="Password"/>
   </div>
   <div>
-    <button class="uk-button uk-button-default" type="submit">signup</button>
+    <button class="uk-button uk-button-secondary" type="submit">Sign-up</button>
   </div>
   </fieldset>
 </form>
