--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,10 +1,10 @@
-<article class="post">
-      <div class="title uk-text-bold">
+<article class="post uk-backgroud-secondary">
+      <div class="title uk-text-bolder">
         <a href="{{post_url}}" target="_blank">{{title}}</a>
         <span>({{format_url post_url}})</span>
       </div>
-      <div class="meta uk-text-meta">
-      Posted by {{user.username}} on
+      <div class="meta uk-text-bold">
+      Posted by {{user.username}} 
         {{format_date created_at}}
         |
         <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
