--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,30 +1,35 @@
 <section>
-  <form class="new-post-form">
-       <fieldset class="uk-fieldset">
-<legend class="uk-legend uk-text-primary">New Post</legend>
-    <div class="uk-margin">
-      
-      <input class="uk-input" type="text" id="post-title" name="post-title" placeholder="Article Title"/>
-    </div>
-    <div class="uk-margin">
-      
-      <input class="uk-input" id="post-url" name="post-url" placeholder="Link!"/>
-    </div>
-    <button type="submit" class="btn uk-button uk-button-secondary">Post</button>
-    </fieldset>
-  </form>
+   <h2>Create a Post</h2>
+
+   <form class="new-post-form">
+      <div>
+         <label for="post-title">Title</label>
+         <input type="text" id="post-title" name="post-title" />
+      </div>
+      <div>
+         <label for="post-url">Add More</label>
+         <input type="text" id="post-url" name="post-url" />
+      </div>
+      <button type="submit" class="btn">Create</button>
+   </form>
 </section>
+
 {{#if posts.length}}
 <section>
-  <h2>Posts</h2>
-  <ol>
-    {{#each posts as |post|}}
-    <li>
-      {{> post-info post}}
-      <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
-    </li>
-    {{/each}}
-  </ol>
+   <h2>Posts</h2>
+   <div>
+      <ol>
+      {{#each posts as |post|}}
+         <li>
+            {{> post-info post }}
+            <button class="edit">
+               <a href="/dashboard/edit/{{post.id}}">Edit</a>
+            </button>
+         </li>
+      {{/each}}
+      </ol>
+   </div>
 </section>
 {{/if}}
+
 <script src="/javascript/add-post.js"></script>
