--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
-<ul class="post-list uk-list uk-list-striped uk-align-center">
-    {{#each posts as |post|}}
-  <li class="uk-background-secondary">
-    {{> post-info post}}
+<ol class="post-list">
+  {{#each posts as |post|}}
+  <li>
+    {{> post-info post }}
   </li>
   {{/each}}
-</ul>
+</ol>
