--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title >ITFiles</title>
-        <link rel="stylesheet" href="/stylesheets/style.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.4/dist/css/uikit.min.css">
-    </head>
-</html>
- <body class="main">
-  
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>IT Files</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="/stylesheets/style.css">
+</head>
+
+<body>
   <div>
-    <header class="uk-flex uk-flex-between uk-background-secondary uk-padding uk-panel">
-      <h1 class="uk-text-bolder">
-        <a href="/" class="nav uk-text-primary" uk-icon="icon: home; ratio:2"></a>
+    <header>
+      <h1 class="nav-item">
+        <a class="nav-link" href="/">IT Files</a>
       </h1>
-      <button class="uk-button uk-button-text uk-button-large uk-text-primary" type="button"><span uk-icon="icon: sign-in; ratio:2"></span></button>
-      <div uk-dropdown class="uk-text-secondary">
-        <ul class="uk-nav uk-dropdown-nav uk-text-secondary"></ul>
+      <h3 class="nav-item">
         {{#if loggedIn}}
-        <li class="uk-active uk-background-secondary"><a href="/dashboard" class="uk-button uk-button-link">dashboard</a></li>
-        <li class="uk-active uk-background-secondary "><button id="logout" class="uk-button uk-button-link uk-text-primary">logout</button></li>
+          <a class="nav-link" href="/dashboard">Create Post</a>
+      </h3>
+      <nav class="nav-link">
+         <button id="logout" class="nav-link active">Logout</button>
         {{else}}
-        <li class="uk-active  uk-background-secondary"><a href="/login" class="nav uk-text-primary">Login</a></li>
+         <a class="nav-link navbar-right" href="/login">Login</a>
         {{/if}}
-        </ul>
-      </div>
+      </nav>
     </header>
-    <main class="uk-background-secondary">
+    <main class="main-body">
       {{{ body }}}
     </main>
-    <footer class="uk-background-secondary">
-      <h6 class="foot-text uk-text-bold uk-text-primary">ITFiles</h4>
+    <footer class="nav justify-content-center">
+      <h3 class="nav-item">
+        <a class="nav-link" href="/">IT Files</a>
+      </h3>
     </footer>
   </div>
+
   {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
   {{/if}}
-  <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.4/dist/js/uikit.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.4/dist/js/uikit-icons.min.js"></script>
+
 </body>
+
+</html>
