--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,40 +1,32 @@
-<div class="uk-flex uk-flex-around">
 <form class="login-form">
-  <fieldset class="uk-fieldset">
-     <legend class="uk-legend uk-text-primary" uk-icon="icon: pencil; ratio:2">Log In</legend>
-  <div class="uk-margin">
-    
-    <input class="uk-input uk-form-width-medium" type="text" id="email-login" placeholder="Email" />
-  </div>
-  <div class="uk-margin">
-    
-    <input class="uk-input uk-form-width-medium" type="password" id="password-login" placeholder="Password"/>
-  </div>
-  <div>
-    <button class= "uk-button uk-button-secondary" type="submit">Login</button>
-  </div>
-  </fieldset>
+   <div>
+      <label for="email-login">email:</label>
+      <input type="text" id="email-login" />
+   </div>
+   <div>
+      <label for="password-login">password:</label>
+      <input type="password" id="password-login" />
+   </div>
+   <div>
+      <button type="submit">login</button>
+   </div>
 </form>
 <form class="signup-form">
-  <fieldset class="uk-fieldset">
-     <legend class="uk-legend uk-text-primary" uk-icon="icon: pencil; ratio:2">Sign Up</legend>
-  <div class="uk-margin">
-    
-    <input class="uk-input uk-form-width-medium" type="text" id="username-signup" placeholder="User Name" />
-  </div>
-  <div class="uk-margin">
-
-    <input class="uk-input uk-form-width-medium" type="text" id="email-signup" placeholder="Email" />
-  </div>
-  <div class="uk-margin">
-    
-    <input class="uk-input uk-form-width-medium" type="password" id="password-signup" placeholder="Password"/>
-  </div>
-  <div>
-    <button class="uk-button uk-button-secondary" type="submit">Sign-up</button>
-  </div>
-  </fieldset>
+   <div>
+      <label for="username-signup">username:</label>
+      <input type="text" id="username-signup" />
+   </div>
+   <div>
+      <label for="email-signup">email:</label>
+      <input type="text" id="email-signup" />
+   </div>
+   <div>
+      <label for="password-signup">password:</label>
+      <input type="password" id="password-signup" />
+   </div>
+   <div>
+      <button type="submit">signup</button>
+   </div>
 </form>
-</div>
 
-<script src='/javascript/login.js'></script>
+<script src="/javascript/login.js"></script>
